kanboard/kanboard.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: kanboard-deployment
  labels:
    app: kanboard
spec:
  containers:
    - name: kanboard
      image: kanboard/kanboard
      ports:
      - containerPort: 80
      volumeMounts:
        - name: my-pvc-storage
          mountPath: /var/www/app/data
  volumes:
    - name: my-pvc-storage
      persistentVolumeClaim:
        claimName: myclaim

---
apiVersion: v1
kind: Service
metadata:
  name: kanboard
spec:
  selector:
    app: kanboard
  ports:
    - port: 81
      targetPort: 80
