kanboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kanboard
  namespace: default
spec:
  selector:
    app: kanboard
  ports:
    - port: 81
      targetPort: 80
