kanboard/ingress-with-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard-ingress
  namespace:
    default
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts: 
    - example.info
    secretName: example-info-tls
  rules:
  - host: example.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanboard
            port: 
              number: 81
