kanboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard-ingress
  namespace:
    default
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /kanboard
        pathType: Prefix
        backend:
          service:
            name: kanboard
            port: 
              number: 81
